--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -276,6 +276,8 @@
    "no-account-found": "No Account Found",
    "no-address": "No {{tokenSymbol}} wallet address found",
    "no-balances": "No balances",
+   "open-order": "Open order",
+   "filled-order": "Filled order",
    "no-borrows": "No borrows found",
    "no-chart": "No chart available",
    "no-funding": "No funding earned or paid",
@@ -285,7 +287,7 @@
    "no-markets": "No markets found",
    "no-new-positions": "Reduce your liabilities by repaying borrows and/or closing postions to withdraw",
    "no-orders": "No open orders",
-   "no-perp": "No futures positions",
+   "no-perp": "No positions",
    "no-trades-found": "No trades found...",
    "no-unsettled": "There are no unsettled funds",
    "no-wallet": "No wallet address",
