--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -276,6 +276,8 @@
    "no-account-found": "Cuenta no encontrada",
    "no-address": "No ${tokenSymbol} dirección de billetera encontrada",
    "no-balances": "Sin saldos",
+   "open-order": "Open order",
+   "filled-order": "Filled order",
    "no-borrows": "No se encontraron préstamos",
    "no-chart": "No chart available",
    "no-funding": "Sin fondos ganados / pagados",
