--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -276,6 +276,8 @@
    "no-account-found": "Не найден аккаунт",
    "no-address": "Адрес кошелька {{tokenSymbol}} не найден",
    "no-balances": "Нет баланса",
+   "open-order": "Open order",
+   "filled-order": "Filled order",
    "no-borrows": "Не найдено заимствований",
    "no-chart": "chart недоступен",
    "no-funding": "Не получено или не выплачено финансирование",
