--- a/public/locales/kr/common.json
+++ b/public/locales/kr/common.json
@@ -40,7 +40,7 @@
    "average-borrow": "Average Borrow Rates",
    "average-deposit": "Average Deposit Rates",
    "average-entry": "Avg Entry Price",
-   "average-funding": "1h Funding Rate",
+   "average-funding": "Funding Rate",
    "back": "Back",
    "balance": "Balance",
    "balances": "Balances",
