--- a/public/locales/zh_tw/common.json
+++ b/public/locales/zh_tw/common.json
@@ -1,6 +1,6 @@
 {
   "30-day": "30天",
-  "404-heading": "此頁面已被清算了",
+  "404-heading": "Page Not Found",
   "404-description": "或者從沒存在...",
   "about-to-withdraw": "您正在取款",
   "above": "高於",
