--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -1,6 +1,6 @@
 {
    "30-day": "30-day",
-   "404-heading": "This page was liquidated",
+   "404-heading": "Page Not Found",
    "404-description": "or, never existed...",
    "about-to-withdraw": "Estas a punto de retirar",
    "above": "Encima",
