--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,6 +1,6 @@
 {
    "30-day": "30-дневный",
-   "404-heading": "Эта страница была ликвидирована",
+   "404-heading": "Page Not Found",
    "404-description": "или никогда не существовала...",
    "about-to-withdraw": "Вы собираетесь сделать вывод",
    "above": "Выше",
